[package]
name = "alexa-verifier"
version = "0.2.2"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2021"
description = "Verify that requests were sent by Alexa for custom webservice skills, in Rust"
license = "MIT"
repository = "https://github.com/tarkah/alexa-rust-webservice-verifier"
readme = "README.md"
keywords = ["alexa", "skill", "verify", "webservice"]

[lib]
name = "alexa_verifier"
path = "src/lib.rs"

[features]
default = ['sync', 'async']
sync = ['reqwest/blocking']
async = ['futures-util']

[dependencies]
base64 = "0.21.4"
der-parser = "2.1"
failure = "0.1"
futures-util = { version = "0.3", optional = true }
log = "0.4"
ring = { version = "0.17", features = ['std'] }
reqwest = "0.11"
time = "0.1"
url = "2.4"
x509-parser = "0.5"

[package.metadata.docs.rs]
all-features = true